--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-multi-carousel": "^2.8.4",
-    "react-responsive": "^9.0.2"
+    "react-responsive": "^9.0.2",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "@types/node": "^20",
