use gif instead of webp for gooeys

--- a/src/app/projectMetadata.json
+++ b/src/app/projectMetadata.json
@@ -3,23 +3,23 @@
     "src": "/ethgobblers/ethgobblers.webp",
     "images": [
       {
-        "path": "/ethgobblers/gooey-1.webp",
+        "path": "/ethgobblers/gooey-1.gif",
         "alt": "Gooey 1"
       },
       {
-        "path": "/ethgobblers/gooey-2.webp",
+        "path": "/ethgobblers/gooey-2.gif",
         "alt": "Gooey 2"
       },
       {
-        "path": "/ethgobblers/gooey-3.webp",
+        "path": "/ethgobblers/gooey-3.gif",
         "alt": "Gooey 3"
       },
       {
-        "path": "/ethgobblers/gooey-4.webp",
+        "path": "/ethgobblers/gooey-4.gif",
         "alt": "Gooey 4"
       },
       {
-        "path": "/ethgobblers/gooey-5.webp",
+        "path": "/ethgobblers/gooey-5.gif",
         "alt": "Gooey 5"
       },
       {
